# cancer-prediction-cmn45

./: .gitignore  LICENSE  README.md  pyproject.toml  update-fork.sh
src/cancer_prediction_cmn45/: cancer_model.py  streamlit_app.py
src/cancer_prediction_cmn45/scripts/: app.py
