[project]
name = "cancer-prediction-cmn45"
description = "A basic model to predict cancerous tumors based on certain properties."
authors = [{name = "Cong Minh Nguyen"}]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.5.2",
    "numpy>=2.1.3",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "matplotlib>=3.10.6",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "isort>=5.13.2",
]
